Updated workItemSubmit heavily, and fixed many bugs and errors that were located there... whoops! Specifically, added Overflows, fixed deletion causing corrupt string outputs, fixed string not updating immediately after date changes, and improved CSS for ease of use

--- a/src/main/resources/public/stylesheets/PositionSubmit.css
+++ b/src/main/resources/public/stylesheets/PositionSubmit.css
@@ -118,7 +118,7 @@ input[type="reset"]:hover {
   margin: 0 auto;
   left: 0;
   right: 0;
-  max-width: 600px;
+  max-width: 100%;
   margin-top: 3%;
   background-color: rgba(255, 240, 245, 0.8);
   border: 2px solid lavenderblush;
